log/build_2024-10-28_10-03-10/my_python_node/stderr.log
Sorry: IndentationError: unexpected indent (listener1 (copy 1).py, line 180)
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 138
    print('$$$$$$$$$$$$$$$$$$$$$$")
          ^
SyntaxError: unterminated string literal (detected at line 138)

